--- a/views/employees_train.hbs
+++ b/views/employees_train.hbs
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>Employee Training Section</title>
+    <link rel="stylesheet" type="text/css" href="../css/index.css" />
+    <script src="../js/index.js"></script>
+    <title>Employee Training Sessions</title>
     <style>
         .form-container {
             display: none;
@@ -45,7 +45,7 @@
 </head>
 <body>
 <header>
-    <h1>Employee Training Section</h1>
+    <h1>Employee Training Sessions</h1>
 </header>
 <nav>
   <a href="/">Home</a>
