--- a/views/index.hbs
+++ b/views/index.hbs
@@ -22,8 +22,8 @@
   <p><a href="/employees_cert">Employee Certifications</a> | 
     Assign, update, and manage certifications for each employee. Keep track of
     certification expiry and renewals.</p>
-  <p><a href="/employees_train">Employee Training Section</a> | 
-    Assign, update, and manage employee training section for each employee.</p>
+  <p><a href="/employees_train">Employee Training Sessions</a> | 
+    Assign, update, and manage employee training sessions for each employee.</p>
 
 </nav>
 <main>
