--- a/views/certifications.hbs
+++ b/views/certifications.hbs
@@ -26,6 +26,7 @@
       <div id="browse">
         <button onClick="newCertification()" class="btn">Add New Certification</button>
         <table>
+          <thead>
           <tr>
             <th>Actions</th>
             <th>Certification ID</th>
@@ -33,258 +34,39 @@
             <th>Certifying Organization</th>
             <th>Description</th>
           </tr>
+          </thead>
+          <tbody>
+            {{#each data}}
           <tr>
             <td>
               <a
                 href="#"
                 onClick="updateCertification(this)"
-                data-id="1"
-                data-name="Safety 101"
-                data-org="OSHA"
-                data-description="Intro to Safety"
+                data-id={{this.certID}}
+                data-name={{this.name}}
+                data-org={{this.certOrg}}
+                data-description={{this.description}}
               >Edit</a>
               |
               <a
                 href="#"
                 onclick="deleteCertification(this)"
-                data-id="1"
-                data-name="Safety 101"
-                data-org="OSHA"
-                data-description="Intro to Safety"
+                data-id={{this.certID}}
+                data-name={{this.name}}
+                data-org={{this.certOrg}}
+                data-description={{this.description}}
               >Delete</a>
             </td>
-            <td align="right">1</td>
-            <td>Safety 101</td>
-            <td>OSHA</td>
-            <td>Intro to Safety</td>
+            <td align="right">{{this.certID}}</td>
+            <td>{{this.name}}</td>
+            <td>{{this.certOrg}}</td>
+            <td>{{this.description}}</td>
           </tr>
-          <tr>
-            <td>
-              <a
-                href="#"
-                onClick="updateCertification(this)"
-                data-id="2"
-                data-name="Drawing Reading 101"
-                data-org="Internal"
-                data-description="Intro to Drawing Reading Training"
-              >Edit</a>
-              |
-              <a
-                href="#"
-                onclick="deleteCertification(this)"
-                data-id="2"
-                data-name="Drawing Reading 101"
-                data-org="Internal"
-                data-description="Intro to Drawing Reading Training"
-              >Delete</a>
-            </td>
-            <td align="right">2</td>
-            <td>Drawing Reading 101</td>
-            <td>Internal</td>
-            <td>Intro to Drawing Reading Training</td>
-          </tr>
-          <tr>
-            <td>
-              <a
-                href="#"
-                onClick="updateCertification(this)"
-                data-id="3"
-                data-name="Drawing Reading 102"
-                data-org="Internal"
-                data-description="Intermediate Level Drawing Reading"
-              >Edit</a>
-              |
-              <a
-                href="#"
-                onclick="deleteCertification(this)"
-                data-id="3"
-                data-name="Drawing Reading 102"
-                data-org="Internal"
-                data-description="Intermediate Level Drawing Reading"
-              >Delete</a>
-            </td>
-            <td align="right">3</td>
-            <td>Drawing Reading 102</td>
-            <td>Internal</td>
-            <td>Intermediate Level Drawing Reading</td>
-          </tr>
-          <tr>
-            <td>
-              <a
-                href="#"
-                onClick="updateCertification(this)"
-                data-id="4"
-                data-name="Drawing Reading 103"
-                data-org="Internal"
-                data-description="Advance Drawing Reading and Generation"
-              >Edit</a>
-              |
-              <a
-                href="#"
-                onclick="deleteCertification(this)"
-                data-id="4"
-                data-name="Drawing Reading 103"
-                data-org="Internal"
-                data-description="Advance Drawing Reading and Generation"
-              >Delete</a>
-            </td>
-            <td align="right">4</td>
-            <td>Drawing Reading 103</td>
-            <td>Internal</td>
-            <td>Advance Drawing Reading and Generation</td>
-          </tr>
-          <tr>
-            <td>
-              <a
-                href="#"
-                onClick="updateCertification(this)"
-                data-id="5"
-                data-name="Ethics Compliance"
-                data-org="OSHA"
-                data-description="Ethics At Workplace Training"
-              >Edit</a>
-              |
-              <a
-                href="#"
-                onclick="deleteCertification(this)"
-                data-id="5"
-                data-name="Ethics Compliance"
-                data-org="OSHA"
-                data-description="Ethics At Workplace Training"
-              >Delete</a>
-            </td>
-            <td align="right">5</td>
-            <td>Ethics Compliance</td>
-            <td>OSHA</td>
-            <td>Ethics At Workplace Training</td>
-          </tr>
-          <tr>
-            <td>
-              <a
-                href="#"
-                onClick="updateCertification(this)"
-                data-id="6"
-                data-name="Cyber Security 101"
-                data-org="IT Compliance"
-                data-description="Intro to Cyber Attack Awareness"
-              >Edit</a>
-              |
-              <a
-                href="#"
-                onclick="deleteCertification(this)"
-                data-id="6"
-                data-name="Cyber Security 101"
-                data-org="IT Compliance"
-                data-description="Intro to Cyber Attack Awareness"
-              >Delete</a>
-            </td>
-            <td align="right">6</td>
-            <td>Cyber Security 101</td>
-            <td>IT Compliance</td>
-            <td>Intro to Cyber Attack Awareness</td>
-          </tr>
-          <tr>
-            <td>
-              <a
-                href="#"
-                onClick="updateCertification(this)"
-                data-id="7"
-                data-name="Cyber Security 102"
-                data-org="IT Compliance"
-                data-description="Intermediate Cyber Attack Awareness"
-              >Edit</a>
-              |
-              <a
-                href="#"
-                onclick="deleteCertification(this)"
-                data-id="7"
-                data-name="Cyber Security 102"
-                data-org="IT Compliance"
-                data-description="Intermediate Cyber Attack Awareness"
-              >Delete</a>
-            </td>
-            <td align="right">7</td>
-            <td>Cyber Security 102</td>
-            <td>IT Compliance</td>
-            <td>Intermediate Cyber Attack Awareness</td>
-          </tr>
-          <tr>
-            <td>
-              <a
-                href="#"
-                onClick="updateCertification(this)"
-                data-id="8"
-                data-name="Torque Cert"
-                data-org="NTSB"
-                data-description="Intro to Torque Training and Certification"
-              >Edit</a>
-              |
-              <a
-                href="#"
-                onclick="deleteCertification(this)"
-                data-id="8"
-                data-name="Torque Cert"
-                data-org="NTSB"
-                data-description="Intro to Torque Training and Certification"
-              >Delete</a>
-            </td>
-            <td align="right">8</td>
-            <td>Torque Cert</td>
-            <td>NTSB</td>
-            <td>Intro to Torque Training and Certification</td>
-          </tr>
-          <tr>
-            <td>
-              <a
-                href="#"
-                onClick="updateCertification(this)"
-                data-id="9"
-                data-name="Sealing Cert"
-                data-org="NTSB"
-                data-description="Intro to Seal Training and Certification"
-              >Edit</a>
-              |
-              <a
-                href="#"
-                onclick="deleteCertification(this)"
-                data-id="9"
-                data-name="Sealing Cert"
-                data-org="NTSB"
-                data-description="Intro to Seal Training and Certification"
-              >Delete</a>
-            </td>
-            <td align="right">9</td>
-            <td>Sealing Cert</td>
-            <td>NTSB</td>
-            <td>Intro to Seal Training and Certification</td>
-          </tr>
-          <tr>
-            <td>
-              <a
-                href="#"
-                onClick="updateCertification(this)"
-                data-id="10"
-                data-name="Crane Cert"
-                data-org="NTSB"
-                data-description="Intro to Electrical Crane and Certification"
-              >Edit</a>
-              |
-              <a
-                href="#"
-                onclick="deleteCertification(this)"
-                data-id="10"
-                data-name="Crane Cert"
-                data-org="NTSB"
-                data-description="Intro to Electrical Crane and Certification"
-              >Delete</a>
-            </td>
-            <td align="right">10</td>
-            <td>Crane Cert</td>
-            <td>NTSB</td>
-            <td>Intro to Electrical Crane and Certification</td>
-          </tr>
+          {{/each}}
+          </tbody>
         </table>
       </div>
+
       <div id="insert" style="display: none;">
         <form method="POST" action="/addCertification" id="addCertification">
           <legend><strong>Add New Certification</strong></legend>
